--- a/values.yaml
+++ b/values.yaml
@@ -5,9 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: asia.gcr.io/nownews-analytics/nodejs-template
+  repository: asia-docker.pkg.dev/nownews-analytics/nodejs-repo/nodejs-template:4.6
   pullPolicy: IfNotPresent
-  tag: "4.3"
+  tag: "4.6"
 
 imagePullSecrets: []
 nameOverride: ""
