--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: asia-docker.pkg.dev/nownews-analytics/nodejs-repo/nodejs-template:4.6
+  repository: asia-docker.pkg.dev/nownews-analytics/nodejs-repo/nodejs-template
   pullPolicy: IfNotPresent
   tag: "4.6"
 
