add init.sh del.sh

--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -7,5 +7,5 @@ data:
   db_host: "172.16.2.200"
   db_user: "docker"
   db_password: "00000000"
-  port: "3011"
+  port: "{{ .Values.application.port }}"
   dev_dev: "4006"
