--- a/values.yaml
+++ b/values.yaml
@@ -51,7 +51,7 @@ ingress:
     nginx.ingress.kubernetes.io/use-regex: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /  ## 加了後任何路徑都會導到 /
   hosts:
-    - host: nodejs-helm-template.linx.website
+    - host: nodejs.linx.blog
       paths:
         - path: /(.*)
           pathType: Prefix
