--- a/values.yaml
+++ b/values.yaml
@@ -63,7 +63,13 @@ ingress:
       paths:
         - path: /(.*)
           pathType: ImplementationSpecific
-
+    # 新增 home.linx.blog 的重定向配置
+    - host: home.linx.blog
+      paths:
+        - path: /
+          pathType: Prefix
+          annotations:
+            nginx.ingress.kubernetes.io/permanent-redirect: https://nodejs.linx.blog
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
